copy functions and tests from scrutiny
* This completes the list of functions at https://github.com/lhdjung/scrutiny/issues/65, with one exception: `split_by_parens()` is meant to be superseded by `separate_wider_parens()`, and to avoid confusion, `split_by_parens()` will be left in scrutiny instead of being copied here.
* `check_new_args_without_dots()` no longer checks for `split_by_parens()`.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,10 +10,20 @@ License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
 Collate: 
     'before-inside-parens.R'
-    'separate-wider-parens.R'
     'utils.R'
+    'decimal-places.R'
+    'is-numeric-like.R'
+    'restore-zeros.R'
+    'row-to-colnames.R'
+    'separate-wider-parens.R'
+    'utils-pipe.R'
 URL: https://github.com/lhdjung/numberstrings
 BugReports: https://github.com/lhdjung/numberstrings/issues
+Imports: 
+    magrittr
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
